--- a/src/Components/Form/index.scss
+++ b/src/Components/Form/index.scss
@@ -8,9 +8,15 @@
     margin: 30px 0 70px 0;
     text-align: center;
     font-family: Source Sans Pro;
+    @media only screen and (max-width:767px) {
+        max-height: unset;
+    }
     .form-container{
         height: 100px;
         background: #eee;
+        @media only screen and (max-width:767px) {
+            background: unset;
+        }
         form {
             display: flex;
             justify-content: space-evenly;
@@ -25,25 +31,46 @@
                 color: black;
                 font-weight: bold;
                 letter-spacing: 2px;
+                @media only screen and (max-width:767px) {
+                    width: 90vw;
+                    padding-top: 0;
+                    margin-left: 10px;
+                }
+            }
+            @media only screen and (max-width:767px) {
+                flex-direction: column;
+                padding-top: 5px;
             }
         }
         input[type="submit"] {
-            width: 283px;
+            width: 20vw;
             height: 45px;
             background: black;
             color: white;
             border: 1px black;
             text-transform: uppercase;
+            @media only screen and (max-width:767px) {
+                width: 90vw;
+                margin: 15px 20px 0;
+            }
         }
         input[type="text"], input[type="email"] {
             margin-right: 25px;
             height: 45px;
-            width: 445px;
+            width: 25vw;
+            @media only screen and (max-width:767px) {
+                width: 90vw;
+                margin-top: 10px;
+                margin-left: 20px;
+            }
         }
         input::placeholder {
             padding-left: 35px;
             text-transform: uppercase;
             font-size: 15px;
+            @media only screen and (max-width:991px) {
+                padding-left: 10px;
+            }
           }
     }
 }
