--- a/src/Pages/Blogs/index.scss
+++ b/src/Pages/Blogs/index.scss
@@ -6,10 +6,14 @@
     box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1);
     margin: auto;
     text-align: center;
+   
 }
 .blogs{
     display: flex;
     justify-content: center;  
     flex-wrap: wrap;
     box-sizing: border-box;
+    @media only screen and (max-width:767px) {
+        margin-top: 50px;
+    }
 }
