--- a/src/Components/Form/index.scss
+++ b/src/Components/Form/index.scss
@@ -34,7 +34,7 @@
                 @media only screen and (max-width:767px) {
                     width: 90vw;
                     padding-top: 0;
-                    margin-left: 10px;
+                    margin: 15px 15px 0;
                 }
             }
             @media only screen and (max-width:767px) {
@@ -60,8 +60,7 @@
             width: 25vw;
             @media only screen and (max-width:767px) {
                 width: 90vw;
-                margin-top: 10px;
-                margin-left: 20px;
+                margin: 15px 10px 0;
             }
         }
         input::placeholder {
