--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('../node_modules/normalize.css/normalize.css');
 
 body {
   margin: 0;
