--- a/src/Components/Blog/index.scss
+++ b/src/Components/Blog/index.scss
@@ -27,31 +27,71 @@
     text-overflow: ellipsis;
     text-align: center;
     font-family: Open Sans;
-    padding: 0 35px
+    padding: 0 35px;
+    margin: 15px 0;
+}
+.date,.tag{
+    font-family: 'Source Sans Pro';
+    font-size: .75em;
+    text-transform: uppercase;
+    opacity: 0.5;
+}
+.tag{
+    margin-top: 35px;
+}
+.date{
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 .blog-body-container{
     padding: 0 35px;
     max-height: 250px;
-    // white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
     .blog-body{
-        font-size: 1em;
+        font-size: .9em;
         color: gray;
         text-align: center;
+        margin-bottom: 0;
+        font-family: Open Sans;
+        line-height: 1.8;
+        letter-spacing: 1.5px;
+        font-weight: 600;
+
+        overflow: hidden;
+        position: relative;
+        max-height: 10em;
+        text-align: justify;
+        margin-right: -1em;
+        padding-right: 1em;
+
+        &:before {
+            content: '...';
+            position: absolute;
+            right: -5px;
+            bottom: -5px;
+          }
+        &:after {
+            content: '';
+            position: absolute;
+            right: 0;
+            width: 1em;
+            height: 1em;
+            margin-top: 0.2em;
+            background: white;
+          }  
     }
 }
 
 .link-container{
-    margin-top: 70px;
+    margin-top: 45px;
     a.read-more-btn {
-        font-family: Open Sans;
+        font-family: Source Sans Pro;
         color: black;
         text-decoration: none;
         text-transform: uppercase;
         font-size: 14px;
         border: 1px solid $lightgray;
         padding: 5px 15px;
+        font-weight: 600;
     }
 }
 @mixin icon-style {
