--- a/src/Components/Form/index.scss
+++ b/src/Components/Form/index.scss
@@ -49,6 +49,7 @@
             color: white;
             border: 1px black;
             text-transform: uppercase;
+            cursor: pointer;
             @media only screen and (max-width:767px) {
                 width: 90vw;
                 margin: 15px 20px 0;
@@ -72,4 +73,8 @@
             }
           }
     }
+}
+.message{
+    font-family: Source Sans Pro;
+    padding: 35px;
 }
