--- a/src/Components/Header/index.scss
+++ b/src/Components/Header/index.scss
@@ -40,6 +40,7 @@
             font-size: 1em;
             margin-right: 1em;
             padding: 1em 5px;
+            cursor: pointer;
             a{
                 text-decoration: none;
                 color: $primary-background;
